--- a/medlegal/web/Admin/agregarCiudad.xhtml
+++ b/medlegal/web/Admin/agregarCiudad.xhtml
@@ -7,7 +7,6 @@
       xmlns:p="http://primefaces.org/ui">
 
     <body>
-
         <ui:composition template="./plantillaAdmin.xhtml">
 
             <ui:define name="content">
@@ -17,27 +16,30 @@
 
                     <h:form>  
                         <p:menubar style="max-height: 26px; padding-right: 1%">
-                            <p:menuitem id="agregar" value="Agregar" icon="ui-icon-gear"/>
-                            <p:menuitem id="modificar" value="Modficar" actionListener="#{ciudadBean.visible()}" 
-                                        update="ciudadList" icon="ui-icon-pencil"/>
+                            <p:menuitem id="agregar" value="Agregar" icon="ui-icon-gear"/>                            
                             <p:menuitem id="actualizar" value="Actualizar" update="ciudadList" ajax="false" icon="ui-icon-arrowrefresh-1-w"/>
                         </p:menubar>
                         <p:overlayPanel id="datos" for="agregar" style="background: gray">
                             <p:panelGrid columns="2" >
                                 <h:outputLabel value="Nombre de la ciudad *" />
-                                <p:inputText value="#{ciudadBean.nombre}" required="true" id="nombre">
+                                <p:inputText value="#{ciudadBean.nombre}" required="true" id="nombre" label="nombre">
                                     <f:validateLength minimum="2"/>
+                                </p:inputText> 
+                                <h:outputLabel value="Codigo de la ciudad *" />
+                                <p:inputText value="#{ciudadBean.codigo}" required="true" id="codigo" label="codigo">
+                                    <f:validateLength minimum="2" maximum="4"/>
                                 </p:inputText> 
                                 <h:outputLabel value="Departamento" />
                                 <p:selectOneMenu value="#{ciudadBean.iddepartamento}" style="width: 180px">
                                     <f:selectItems value="#{ciudadBean.departamentolist}" var="d"
                                                    itemLabel="#{d.descdepartamento}" itemValue="#{d.iddepartamento}" />
                                 </p:selectOneMenu>
-                                <p:commandButton actionListener="#{ciudadBean.agregar()}" value="Agregar" update="ciudadList" style="color: blue; background: white"/>
+                                <p:commandButton actionListener="#{ciudadBean.agregar()}" value="Agregar" 
+                                                 update="ciudadList" ajax="false" style="color: blue; background: white"/>
                                 <h:outputLabel value="!Los campos con * son obligatorios!" style="font-style: italic; color: #045491" />
                             </p:panelGrid>
                         </p:overlayPanel>
-
+                        <p:messages closable="true" showDetail="true"/>
                         <p:dataTable var="ciu" value="#{ciudadBean.ciudadLista()}" id="ciudadList" editable="true" 
                                      rows="15" paginator="true" rowsPerPageTemplate="15,20,30" style="width: 700px; height">  
                             <f:facet name="header">  
@@ -60,7 +62,7 @@
                                     </f:facet>  
                                 </p:cellEditor>  
                             </p:column>
-                            <p:column headerText="Modificar" style="width:20px" rendered="#{ciudadBean.modificar}" >  
+                            <p:column headerText="Modificar" style="width:20px" >  
                                 <p:rowEditor/>  
                             </p:column>  
                         </p:dataTable> <br/>
@@ -69,6 +71,5 @@
                 </f:view>
             </ui:define>
         </ui:composition>
-
     </body>
 </html>
