--- a/medlegal/web/Admin/agregarNombreProceso.xhtml
+++ b/medlegal/web/Admin/agregarNombreProceso.xhtml
@@ -18,19 +18,24 @@
                         <p:overlayPanel id="datos" for="agregar" hideEffect="fade" style="background-color: scrollbar">
                             <p:panelGrid columns="2" style="width: 400px">
                                 <h:outputLabel value="Nombre del Nombre de Proceso *" />
-                                <p:inputText id="nombre" value="#{nombreProcesoBean.nombre}" required="true">
+                                <p:inputText id="nombre" value="#{nombreProcesoBean.nombre}" required="true" label="nombre">
                                     <f:validateLength minimum="2"/>
                                 </p:inputText>
+                                <h:outputLabel value="Seleccione el Tipo de Proceso *" />
+                                <p:selectOneMenu value="#{nombreProcesoBean.idtipopro}">
+                                    <f:selectItem itemLabel="Selecciones el tipo" noSelectionOption="true"/>
+                                    <f:selectItems value="#{nombreProcesoBean.tipoProList()}" var="tipo"
+                                                   itemLabel="#{tipo.desctipo}" itemValue="#{tipo.idtipoproceso}"/>
+                                </p:selectOneMenu>
                                 <h:outputLabel value="Los campos con * son obligatorios"  style="font-style: italic; color: #045491"/>
                                 <p:commandButton action="#{nombreProcesoBean.agregar()}" value="Agregar" update="nombreList" ajax="false"/>
                             </p:panelGrid>
                         </p:overlayPanel>
                         <p:menubar style="height: 26px; padding-right: 1%">
-                            <p:menuitem id="agregar" value="Agregar Nombre de Proceso" update="nombreList"  immediate="true" icon="ui-icon-gear"/>   
-                            <p:menuitem id="modificar" value="Modificar Datos del Nombre de Proceso" actionListener="#{usuarioBean.visible()}" immediate="true" icon="ui-icon-pencil"/> 
+                            <p:menuitem id="agregar" value="Agregar Nombre de Proceso" update="nombreList"  immediate="true" icon="ui-icon-gear"/>                               
                             <p:menuitem value="Actualizar" update="nombreList" icon="ui-icon-arrowrefresh-1-w" ajax="false"/> 
                         </p:menubar>   
-                        <p:message for="nombre" display="" /> 
+                        <p:messages closable="true" showDetail="true"/> 
 
                         <p:dataTable var="nombre" value="#{nombreProcesoBean.nombreProList()}" id="nombreList" editable="true" style="width: 600px">  
 
@@ -54,7 +59,7 @@
                                     </f:facet>  
                                 </p:cellEditor>  
                             </p:column>
-                            <p:column headerText="Modificar" style="width:20px" rendered="#{nombreProcesoBean.modificar}" >  
+                            <p:column headerText="Editar" style="width:20px">  
                                 <p:rowEditor/>  
                             </p:column>  
                         </p:dataTable>
