--- a/medlegal/web/Admin/agregarRiesgo.xhtml
+++ b/medlegal/web/Admin/agregarRiesgo.xhtml
@@ -82,7 +82,7 @@
                         </p:column> 
                         
                         <p:column headerText="Descripcion" width="200">                 
-                            <h:outputText value="#{ries.descripcion}" />                          
+                            <h:outputText value="#{ries.descriesgo}" />                          
                         </p:column>
 
                         <p:column headerText="Enfoque" width="120">            
@@ -94,10 +94,6 @@
                         </p:column>  
                     </p:dataTable> 
                 </h:form>
-            </ui:define>
-
-            <ui:define name="bottom">
-                bottom
             </ui:define>
 
         </ui:composition>
